# adaptalk

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  flake.nix  justfile
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
docs/adr/: 0001-thin-adapt-mcp-client.md  0002-read-only-first-release.md  0003-store-adapt-credentials-in-adapt-directory.md  0004-fail-closed-read-only-capability-verification.md  0005-derive-remote-continuation-from-transcript.md  0006-local-file-references.md
docs/agents/: domain.md
docs/specs/: adapt-tui-issues.md  adapt-tui.md  adaptalk.md
src/: adapt_client.rs  auth.rs  chat_terminal.rs  config.rs  conversation_controller.rs  file_references.rs  lib.rs  main.rs  redaction.rs  session_history.rs  transcript.rs  update_checker.rs
src/session_history/: stored.rs
