[package]
name = "adapt-tui"
version = "0.1.0"
edition = "2024"
description = "A read-only terminal client for Adapt's MCP server"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
# Reuse RMCP's Rustls-configured HTTP client without enabling Reqwest's
# unrelated default proxy, charset, and native-TLS features.
reqwest = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"

# Keep the MCP boundary behind our own adapter until Adapt's hosted endpoint
# contract is verified against the current RMCP transport APIs.
rmcp = { version = "0.16", features = [
  "client",
  "reqwest",
  "transport-streamable-http-client-reqwest",
] }

[lints.rust]
unsafe_code = "forbid"
